Adding button for scrolling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,9 @@
     <section>
         <h1 class="title">Hi, my name is Isai Castro</h1>
         <h1 class="title-2">I am a Web Developer</h1>
+        <div class="more-btn">
+          <button class='more'>More</button>
+        </div>
       </section>
       <section>
         <div class="container reveal fade-bottom">
