Fixing title page responsiveness

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   </head>
 <body>
     <section>
+      <div class="first-page">
         <h1 class="title">Hi, my name is Isai Castro</h1>
         <h1 class="title-2">I am a Web Developer</h1>
-        <div class="more-btn">
-          <button class='more'>More</button>
-        </div>
+        <button class='more'>More</button>
+      </div>
       </section>
       <section>
         <div class="container reveal fade-bottom">
