Finished first page

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <section>
       <div class="first-page">
-        <h1 class="title">Hi, my name is Isai Castro</h1>
+        <h1 class="title">Hi, my name is <span class="title-name" >Isai Castro</span></h1>
         <h1 class="title-2">I am a Web Developer</h1>
-        <button class='more'>More</button>
+        <button class='btn-more'> <span>More</span></button>
       </div>
       </section>
       <section>
