Added scroll to 2nd page after button click

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="first-page">
         <h1 class="title">Hi, my name is <span class="title-name" >Isai Castro</span></h1>
         <h1 class="title-2">I am a Web Developer</h1>
-        <button class='btn-more'> <span>More</span></button>
+        <a href="#second"><button class='btn-more'> <span>More</span></button></a>
       </div>
       </section>
-      <section>
+      <section id="second">
         <div class="container reveal fade-bottom">
           <h2>Caption</h2>
           <div class="text-container">
