Finished Projects section with added links to all projects

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <div class="container reveal fade-left">
           <h2 class="projects-title">Projects</h2>
           <div class="text-container projects-container">
+
+            <!-- Project 1 -->
             <div class="project-1">
               <div class="text-box project1-desc">
                 <h3 class="project-title">Face-Recognition</h3>
@@ -66,7 +68,10 @@
                   will be sent to an image recognition API that will return
                   coordinates where it detects a face. Using these coordinates
                   a border will be inserted sorrounding the face. It also includes 
-                  a RESTful API with the ability to sign in/register and authenticate users.
+                  a RESTful API with the ability for users to sign in and register.
+                </p>
+                <p>
+                  <b>Tools Used : </b><p>React, CSS, Node.js, Express.js, PostgreSQL</p>
                 </p>
                 <a 
                   target=”_blank”
@@ -89,25 +94,76 @@
                 <img class="proj-img" src="assets/Face Recognition-logo.jpeg" alt="">
               </div>
             </div>
-            <div class="text-box project2">
-              <h3 class="project-title-2">project 2</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                eius molestiae perferendis eos provident vitae iste.
-              </p>
+
+            <!-- Project 2 -->
+            <div class="project-2">
+              <div class="text-box project2-desc">
+                <h3 class="project-title">Facebook Clone</h3>
+                <p>
+                  As you can tell, this project is a clone to the very popular Facebook. 
+                  I built this project from scratch! Trying to match the UI of the original 
+                  Facebook with some functionality behind it as well.
+                </p>
+                  <b>Tools Used : </b><p>HTML, CSS, JavaScript</p>
+                <a 
+                  target=”_blank”
+                  rel="noopener noreferrer"
+                  href="https://isaicastro1.github.io/Facebook-Copy/">
+                  <button class="see-live">
+                    See Live
+                  </button>
+                </a>
+                <a 
+                  target=”_blank”
+                  rel="noopener noreferrer"
+                  href="https://github.com/isaicastro1/Facebook-Copy">
+                  <button class="source-code">
+                    Source Code
+                  </button>
+                </a>
+              </div>
+              <div class="project2-img">
+                <img class="proj2-img" src="assets/Facebook-Logo.png" alt="">
+              </div>
             </div>
-            <div class="text-box project3">
-              <h3 class="project-title-3">project 3</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                eius molestiae perferendis eos provident vitae iste.
-              </p>
+
+            <!-- Project 3 -->
+            <div class="project-3">
+              <div class="text-box project3-desc">
+                <h3 class="project-title">BackGround Generator</h3>
+                <p>
+                  This project gives you the ability to randomize 
+                  color patterns that you can then use for your websites!
+                  It is really helpful and one of my most used projects as 
+                  it is great to visualize the patterns you want your website to have.
+                </p>
+                  <b>Tools Used : </b><p>HTML, CSS, JavaScript</p>
+                <a 
+                  target=”_blank”
+                  rel="noopener noreferrer"
+                  href="https://isaicastro1.github.io/Background-Generator/">
+                  <button class="see-live">
+                    See Live
+                  </button>
+                </a>
+                <a 
+                  target=”_blank”
+                  rel="noopener noreferrer"
+                  href="https://github.com/isaicastro1/Background-Generator">
+                  <button class="source-code">
+                    Source Code
+                  </button>
+                </a>
+              </div>
+              <div class="project3-img">
+                <img class="proj3-img" src="assets/BG.png" alt="">
+              </div>
             </div>
           </div>
         </div>
       </section>
       
-      <section id="contact">
+      <!-- <section id="contact">
         <div class="container reveal fade-right">
           <h2>Caption</h2>
           <div class="text-container">
@@ -134,7 +190,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 </body>
 <script src="script.js"></script>
 </html>
