Working on Contact section

--- a/index.html
+++ b/index.html
@@ -160,35 +160,31 @@
           </div>
         </div>
       </section>
-      
-      <!-- <section id="contact">
+      <!-- End Projects -->
+
+      <section id="contact">
         <div class="container reveal fade-right">
-          <h2>Caption</h2>
-          <div class="text-container">
-            <div class="text-box">
-              <h3>Section Text</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                eius molestiae perferendis eos provident vitae iste.
+          <div class="text-container-contact">
+            <div class="text-box-contact">
+              <h2 class="contact-title">CONTACT</h2>
+              <p class="contact-p">
+                If you have any questions, do not hesitate <br>
+                to contact me. I would love to answer them.
               </p>
             </div>
-            <div class="text-box">
-              <h3>Section Text</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                eius molestiae perferendis eos provident vitae iste.
-              </p>
-            </div>
-            <div class="text-box">
-              <h3>Section Text</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                eius molestiae perferendis eos provident vitae iste.
-              </p>
-            </div>
+            <a 
+              rel="noreferrer"
+              target="_blank"
+              class="cta-btn cta-btn--resume"
+              href="mailto:isaicstr@gmail.com"
+            >
+              <button class="contact-btn">
+                  Contact Me
+              </button>
+            </a>
           </div>
         </div>
-      </section> -->
+      </section>
 </body>
 <script src="script.js"></script>
 </html>
