Adding buttons for social links

--- a/index.html
+++ b/index.html
@@ -184,6 +184,14 @@
             </a>
           </div>
         </div>
+        <div class="social-links">
+          <a rel="noreferrer" href="https://github.com/isaicastro1" target="_blank">
+            <img src="assets/github.png" alt="">
+          </a>
+          <a rel="noreferrer" href="https://www.linkedin.com/in/isai-castro-063812238/" target="_blank">
+            <img src="assets/linkedin.png" alt="">
+          </a>
+        </div>
       </section>
 </body>
 <script src="script.js"></script>
