Fixing bugs on buttons

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   target=”_blank”
                   rel="noopener noreferrer"
                   href="https://isaicastro1.github.io/Facebook-Copy/">
-                  <button class="see-live">
+                  <button class="proj2-live">
                     See Live
                   </button>
                 </a>
@@ -115,7 +115,7 @@
                   target=”_blank”
                   rel="noopener noreferrer"
                   href="https://github.com/isaicastro1/Facebook-Copy">
-                  <button class="source-code">
+                  <button class="proj2-src">
                     Source Code
                   </button>
                 </a>
@@ -140,7 +140,7 @@
                   target=”_blank”
                   rel="noopener noreferrer"
                   href="https://isaicastro1.github.io/Background-Generator/">
-                  <button class="see-live">
+                  <button class="proj3-live">
                     See Live
                   </button>
                 </a>
@@ -148,7 +148,7 @@
                   target=”_blank”
                   rel="noopener noreferrer"
                   href="https://github.com/isaicastro1/Background-Generator">
-                  <button class="source-code">
+                  <button class="proj3-src">
                     Source Code
                   </button>
                 </a>
