Fixing path to project 2 image

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </a>
               </div>
               <div class="project2-img">
-                <img class="proj2-img" src="assets/Facebook-Logo.png" alt="">
+                <img class="proj2-img" src="assets/Facebook-logo.png" alt="">
               </div>
             </div>
 
