Making website mobile friendly

--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
       </section>
       
       <section id="projects">
-        <div class="container reveal fade-left">
+        <div class="container projects-container reveal fade-left">
           <h2 class="projects-title">Projects</h2>
-          <div class="text-container projects-container">
+          <!-- <div class="text-container"> -->
 
             <!-- Project 1 -->
             <div class="project-1">
               <div class="text-box project1-desc">
                 <h3 class="project-title">Face-Recognition</h3>
-                <p>
+                <p class="project-p">
                   This project allows users to share images which 
                   will be sent to an image recognition API that will return
                   coordinates where it detects a face. Using these coordinates
                   a border will be inserted sorrounding the face. It also includes 
-                  a RESTful API with the ability for users to sign in and register.
+                  a RESTful API with the ability for users to sign in and register.<br><br>
+                  Tools Used : React, CSS, Node.js, Express.js, PostgreSQL
                 </p>
-                  <b>Tools Used : </b><p>React, CSS, Node.js, Express.js, PostgreSQL</p>
                 <a 
                   target=”_blank”
                   rel="noopener noreferrer"
                   href="https://isaicastro1.github.io/Face-Recognition/">
                   <button class="see-live">
-                    See Live
+                    Live
                   </button>
                 </a>
                 <a 
@@ -84,7 +84,7 @@
                   rel="noopener noreferrer"
                   href="https://github.com/isaicastro1/Face-Recognition">
                   <button class="source-code">
-                    Source Code
+                    Code
                   </button>
                 </a>
               </div>
@@ -94,15 +94,15 @@
             </div>
 
             <!-- Project 2 -->
-            <div class="project-2">
+            <!-- <div class="project-2"> 
               <div class="text-box project2-desc">
                 <h3 class="project-title">Facebook Clone</h3>
                 <p>
                   As you can tell, this project is a clone to the very popular Facebook. 
                   I built this project from scratch! Trying to match the UI of the original 
-                  Facebook with some functionality behind it as well.
+                  Facebook with some functionality behind it as well.<br><br>
+                  Tools Used : HTML, CSS, JavaScript
                 </p>
-                  <b>Tools Used : </b><p>HTML, CSS, JavaScript</p>
                 <a 
                   target=”_blank”
                   rel="noopener noreferrer"
@@ -123,19 +123,19 @@
               <div class="project2-img">
                 <img class="proj2-img" src="assets/Facebook-logo.png" alt="">
               </div>
-            </div>
+            </div> -->
 
             <!-- Project 3 -->
-            <div class="project-3">
+            <!-- <div class="project-3"> 
               <div class="text-box project3-desc">
                 <h3 class="project-title">BackGround Generator</h3>
                 <p>
                   This project gives you the ability to randomize 
                   color patterns that you can then use for your websites!
                   It is really helpful and one of my most used projects as 
-                  it is great to visualize the patterns you want your website to have.
+                  it is great to visualize the patterns you want your website to have.<br><br>
+                  Tools Used : HTML, CSS, JavaScript
                 </p>
-                  <b>Tools Used : </b><p>HTML, CSS, JavaScript</p>
                 <a 
                   target=”_blank”
                   rel="noopener noreferrer"
@@ -159,10 +159,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Projects -->
 
-      <section id="contact">
+      <!-- <section id="contact"> 
         <div class="container reveal fade-right">
           <div class="text-container-contact">
             <div class="text-box-contact">
@@ -192,7 +192,7 @@
             <img src="assets/linkedin.png" alt="">
           </a>
         </div>
-      </section>
+      </section>  -->
 </body>
 <script src="script.js"></script>
 </html>
