Added second project to portfolio

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             </div>
 
             <!-- Project 2 -->
-            <!-- <div class="project-2"> 
+            <div class="project-2"> 
               <div class="text-box project2-desc">
                 <h3 class="project-title">Facebook Clone</h3>
-                <p>
+                <p class="project-p">
                   As you can tell, this project is a clone to the very popular Facebook. 
                   I built this project from scratch! Trying to match the UI of the original 
                   Facebook with some functionality behind it as well.<br><br>
@@ -108,7 +108,7 @@
                   rel="noopener noreferrer"
                   href="https://isaicastro1.github.io/Facebook-Copy/">
                   <button class="proj2-live">
-                    See Live
+                    Live
                   </button>
                 </a>
                 <a 
@@ -116,14 +116,14 @@
                   rel="noopener noreferrer"
                   href="https://github.com/isaicastro1/Facebook-Copy">
                   <button class="proj2-src">
-                    Source Code
+                    Code
                   </button>
                 </a>
               </div>
               <div class="project2-img">
                 <img class="proj2-img" src="assets/Facebook-logo.png" alt="">
               </div>
-            </div> -->
+            </div>
 
             <!-- Project 3 -->
             <!-- <div class="project-3"> 
