--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             </div>
 
             <!-- Project 3 -->
-            <!-- <div class="project-3"> 
+            <div class="project-3"> 
               <div class="text-box project3-desc">
                 <h3 class="project-title">BackGround Generator</h3>
-                <p>
+                <p class="project-p">
                   This project gives you the ability to randomize 
                   color patterns that you can then use for your websites!
                   It is really helpful and one of my most used projects as 
@@ -141,7 +141,7 @@
                   rel="noopener noreferrer"
                   href="https://isaicastro1.github.io/Background-Generator/">
                   <button class="proj3-live">
-                    See Live
+                    Live
                   </button>
                 </a>
                 <a 
@@ -149,7 +149,7 @@
                   rel="noopener noreferrer"
                   href="https://github.com/isaicastro1/Background-Generator">
                   <button class="proj3-src">
-                    Source Code
+                    Code
                   </button>
                 </a>
               </div>
@@ -159,7 +159,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- End Projects -->
 
       <!-- <section id="contact"> 
