--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       </section>
       <!-- End Projects -->
 
-      <!-- <section id="contact"> 
-        <div class="container reveal fade-right">
+      <section id="contact"> 
+        <div class=" reveal fade-right">
           <div class="text-container-contact">
             <div class="text-box-contact">
               <h2 class="contact-title">CONTACT</h2>
@@ -172,16 +172,18 @@
                 to contact me. I would love to answer them.
               </p>
             </div>
-            <a 
-              rel="noreferrer"
-              target="_blank"
-              class="cta-btn cta-btn--resume"
-              href="mailto:isaicstr@gmail.com"
-            >
-              <button class="contact-btn">
-                  Contact Me
-              </button>
-            </a>
+            <div class="contact-button">
+              <a 
+                rel="noreferrer"
+                target="_blank"
+                class="cta-btn cta-btn--resume"
+                href="mailto:isaicstr@gmail.com"
+              >
+                <button class="contact-btn">
+                    Contact Me
+                </button>
+              </a>
+            </div>
           </div>
         </div>
         <div class="social-links">
@@ -192,7 +194,7 @@
             <img src="assets/linkedin.png" alt="">
           </a>
         </div>
-      </section>  -->
+      </section> 
 </body>
 <script src="script.js"></script>
 </html>
