Adding media queries for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="image-box">
               <img class="prof-pic" src="assets/prof-pic.jpg" alt="">
             </div>
-            <div class="text-box">
+            <div class="text-box about-text">
               <p>
                 Hello! I am a 22 year old who loves computers and gained 
                 a passion for software development. I attended a bootcamp 
